--- a/css/markdown-slides.css
+++ b/css/markdown-slides.css
@@ -24,21 +24,6 @@
     display: none;
 }
 
-/***** Per slide hacks *****/
-
-div#step-4 > p:last-child {
-    margin-top: 150px;
-    font-size: 0.5em;
-    text-align: right;
-}
-
-div#tilted-slide {
-    text-shadow: 20px 20px 10px rgba(0, 0, 0, .4);
-}
-div#tilted-slide h1 {
-    margin-top: 200px;
-}
-
 /***** Menu where this style is selected *****/
 .css-menu-bw {
     border: solid 1px rgb(102, 102, 102);
@@ -60,10 +45,10 @@ body {
 
 .step {
     position: relative;
-    width: 900px;
-    height: 700px;
+    width: 1200px;
+    height: 900px;
     padding: 40px 60px;
-    margin: 20px auto;
+    margin: 10px auto;
 
     box-sizing:         border-box;
 
@@ -121,14 +106,14 @@ a {
     color: inherit;
     text-decoration: none;
     padding: 0 0.1em;
-    text-shadow: -1px 1px 2px rgba(100,100,100,0.9);
+    text-shadow: -1px 1px 1px rgba(100,100,100,0.9);
     border-radius: 0.2em;
 
     transition:         0.5s;
 }
 a:hover,
 a:focus {
-    text-shadow: -1px 1px 2px rgba(100,100,100,0.5);
+    text-shadow: -1px 1px 1px rgba(100,100,100,0.5);
 }
 
 blockquote {
@@ -138,11 +123,11 @@ blockquote {
 }
 
 em {
-    text-shadow: 0 2px 2px rgba(0, 0, 0, .3);
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
 }
 
 strong {
-    text-shadow: -1px 1px 2px rgba(100,100,100,0.5);
+    text-shadow: -1px 1px 1px rgba(100,100,100,0.5);
 }
 
 q {
@@ -163,6 +148,10 @@ img {
     margin-right:   0px;
     margin-top:    20px;
     margin-bottom: 20px;
+}
+
+img.full {
+  width: 100%;
 }
 
 
