--- a/css/markdown-slides.css
+++ b/css/markdown-slides.css
@@ -48,7 +48,7 @@ body {
     width: 1200px;
     height: 900px;
     padding: 40px 60px;
-    margin: 10px auto;
+    margin: -10px auto;
 
     box-sizing:         border-box;
 
@@ -141,7 +141,7 @@ strike {
     opacity: 0.7;
 }
 
-img {
+img.right {
     width: 300px;
     float: right;
     margin-left:   40px;
