Added images for value adds, and QR code.

--- a/css/markdown-slides.css
+++ b/css/markdown-slides.css
@@ -154,6 +154,11 @@ img.full {
   width: 100%;
 }
 
+#final-logo {
+  width: 50%;
+  margin-left: 27%;
+}
+
 
 /*
     Specific styles for: .title steps
