Commiting stray details after the fact.

--- a/css/slide-hacks.css
+++ b/css/slide-hacks.css
@@ -1,3 +1,12 @@
+#prep {
+  display: flex;
+}
+
+#prep div {
+  margin: 5px;
+}
+
+/******************************/
 
 #value-adds {
   display: flex;
