--- a/css/markdown-slides.css
+++ b/css/markdown-slides.css
@@ -25,22 +25,26 @@
 }
 
 /***** Menu where this style is selected *****/
-.css-menu-bw {
+/* .css-menu-bw {
     border: solid 1px rgb(102, 102, 102);
 }
 
 .effects .css-menu-bw,
 .devopsy .css-menu-bw {
     border: none;
-}
+} */
 
 /***** Presentation *****/
 
 body {
-    font-family: 'PT Sans', sans-serif;
+    font-family: 'Roboto', sans-serif;
     min-height: 740px;
 
-    background: #fff;
+
+    background-color: #282828;
+    background-image: url('../images/ParityBackground.png');
+    background-size: 100%;
+    background-repeat: no-repeat;
 }
 
 .step {
@@ -52,12 +56,30 @@ body {
 
     box-sizing:         border-box;
 
-    color: rgb(102, 102, 102);
+    color: #F1F3F2;
     text-shadow: 0 2px 2px rgba(0, 0, 0, .1);
-    font-family: 'Open Sans', Arial, sans-serif;
+    font-family: 'Roboto', Arial, sans-serif;
     font-size: 30px;
     letter-spacing: -1px;
     line-height: 1.5;
+}
+
+.slide {
+  /* #282828 from styleguide becomes rgb(40, 40, 40) */
+  background: rgba(40, 40, 40, .98);
+  border-radius: 25px;
+  border: solid 2px #595A57;
+  transition: all 2s;
+}
+
+.pink-box {
+  /* The thin pink box from the parity template */
+  position: absolute;
+  width: 300px;
+  height: 5px;
+  left: 400px;
+  top: 550px;
+  background: #FF1864;
 }
 
 /*
@@ -103,7 +125,7 @@ code {
 
 
 a {
-    color: inherit;
+    color: #FF1864;
     text-decoration: none;
     padding: 0 0.1em;
     text-shadow: -1px 1px 1px rgba(100,100,100,0.9);
@@ -178,8 +200,9 @@ img.full {
 
 
 
-
+/* used for bottom bar */
 #conference-branding {
+    display: none;
     position: fixed;
     width:100%;
     bottom: 0;
@@ -197,7 +220,7 @@ body.impress-mouse-timeout {
 /* Help popup plugin */
 .impress-enabled #impress-help {
     background: none repeat scroll 0 0 rgba(0, 0, 0, 0.5);
-    color: #EEEEEE;
+    color: #F1F3F2;
     font-size: 80%;
     position: fixed;
     left: 2em;
