--- a/css/slide-hacks.css
+++ b/css/slide-hacks.css
@@ -48,10 +48,15 @@
 /******************************/
 
 #web-app img{
-  width: 200px;
+  width: 300px;
   position: absolute;
-  right: 20%;
+  right: 10%;
   bottom: 0;
+}
+
+#web-app h2 {
+  position: relative;
+  right: 20%;
 }
 
 /******************************/
